[gd_scene load_steps=3 format=3 uid="uid://3ad0wy0o4jbe"]

[ext_resource type="Script" path="res://Scripts/Tile.gd" id="1_iv8gk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q3dan"]
size = Vector2(64, 64)

[node name="Area2D" type="Area2D" groups=["Tiles"]]
script = ExtResource("1_iv8gk")

[node name="legalTileIndicator" type="ColorRect" parent="."]
visible = false
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
color = Color(0.219608, 0.705882, 0.537255, 0.427451)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_q3dan")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
